--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -5,7 +5,7 @@ body {
 }
 
 .banner {
-    background-image: url("/projectAvengers/images/pennywise.jpg");
+    background-image: url("./images/pennywise.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center; 
